# cinnamon-extensions-system-monitor

./: Makefile.am  README  README.md  autogen.sh  cinnamon-system-monitor-config  cinnamon-system-monitor-config.desktop  cinnamon-system-monitor-config.desktop.in  configure.ac
debian/: changelog  control  control.in  copyright
po/: LINGUAS  POTFILES.in  cs_CZ.po  de_DE.po  fa.po  fr_FR.po  it_IT.po  pl.po  pt_PT.po  ro_RO.po  ru_RU.po
src/: Makefile.am  extension.js  metadata.json.in  org.cinnamon.extensions.system-monitor.gschema.xml.in
